--- a/Reto/index.html
+++ b/Reto/index.html
@@ -20,8 +20,8 @@
         <div class="nav2">
             <ul>
                 <li><a id="nav2" href="#">Relevant</a></li>
-                <li><a id="nav2" href="#">Latest</a></li>
-                <li><a id="nav2" href="#">Top</a></li>
+                <li><a href="#">Latest</a></li>
+                <li><a href="#">Top</a></li>
             </ul>
         </div>
         <div>
@@ -76,4 +76,3 @@
     </footer>
     
 </body>
-</html>
