--- a/Reto/index.html
+++ b/Reto/index.html
@@ -13,7 +13,76 @@
 
         </nav>
     </header>
-    <aside> <!-- Daniel-->
+    <aside id="asideIzq">
+        <div id="containerAsideIzq1">
+            <p><b><a href="#">DEV Community</a> is a community of 828,183 amazing developers</b></p>
+            <p>We're a place where coders share, stay up-to-date and grow their careers.</p>
+            <p><a class="buttonIzq1" href="#">Create account</a></p>
+            <p>Log in</p>
+        </div>
+
+        <div id="containerAsideIzq2">
+            <ul>
+                <li><img src="./img/casa.png" alt="img"> <a href="">Home</a></li>
+                <li><img src="./img/listings.png" alt="img"> <a href="">Listing</a></li>
+                <li><img src="./img/podcast.png" alt="img"> <a href="">Podcast</a></li>
+                <li><img src="./img/video.png" alt="img"> <a href="">Videos</a></li>
+                <li><img src="./img/Tags.png" alt="img"> <a href="">Tags</a></li>
+                <li><img src="./img/FAQ.png" alt="img"> <a href="">Contact</a></li> 
+                <li><img src="./img/forem.png" alt="img"> <a href="">FAQ</a></li>
+                <li><img src="./img/sponsors.png" alt="img"> <a href="">Forem Shop</a></li>
+                <li><img src="./img/about.png" alt="img"> <a href="">Sponsors</a></li>
+                <li><img src="./img/contact.png" alt="img"> <a href="">About</a></li>              
+            </ul>
+        </div>
+
+        <div id="containerAsideIzq3">
+            <p><b>Other</b></p>
+            <ul>
+                <li><img src="./img/conduct.png" alt="img"><a href="#">Code of Conduct</a></li>
+                <li><img src="./img/privacy.png" alt="img"><a href="#">Pryvacy Policy</a></li>
+                <li><img src="./img/termsuse.png" alt="img"><a href="#">Terms of use</a></li>
+            </ul>
+        </div>
+      
+        <div>
+            <img src="./img/tw.png" alt="t">
+            <img src="./img/fb.png" alt="f">
+            <img src="./img/gh.png" alt="g">
+            <img src="./img/sc.png" alt="s">
+            <img src="./img/mg.png" alt="m">
+        </div>
+
+        <div id="containerAsideIzq4">
+            <p><b>Popular Tags</b></p>
+            <ul>
+                <li>#javascript</li>
+                <li>#webdev</li>
+                <li>#beginners</li>
+                <li>#programming</li>
+                <li>#tutorial</li>
+                <li>#react</li>
+                <li>#python</li>
+            </ul>            
+        </div>
+
+        <div id="containerAsideIzq5">
+            <img src="./img/wa.png" alt="wa" width="85%">
+            <a href="#">Immerse yourself in the WebAssembly ecosystem
+                <img src="./img/ok.png" alt="ok">
+            </a>
+        </div>
+        
+        <div id="containerAsideIzq6">
+            <p>DEV runs on 100% open source code known as <a href="#">Forem</a>.
+                Contribute to the codebase or host your own!</p>
+            <p><b>Check these out! <img src="./img/manita_abajo.png" alt="img"></b></p>
+            <ul>
+                <li><a href="#">Main Forem Repo</a></li>
+                <li><a href="#">Self-Host Instructions</a></li>
+            </ul>
+
+        </div>
 
     </aside>
     <main class="maincontainer"> <!--Nestor-->
