se termina el primer cuadro del aside izq

--- a/Reto_2/Reto_2/index.html
+++ b/Reto_2/Reto_2/index.html
@@ -34,12 +34,13 @@
             <!-- Daniel-->
     
             <div id="containerAsideIzq1">
-                <p><b><a href="#">DEV Community</a> is a community of 828,183 amazing developers</b></p>
+                <p><b><a class="dev" href="#">DEV Community</a> is a community of 828,183 amazing developers</b></p>
+                <br>
                 <p>We're a place where coders share, stay up-to-date and grow their careers.</p>
                 <br>
                 <p><a class="buttonIzq1" href="#">Create account</a></p>
                 <br>
-                <p>Log in</p>
+                <p class="login"><a href="#">Log in</a></p>
             </div>
     
             <div id="containerAsideIzq2">
